--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "rmccue/requests": "^1.8"
+        "rmccue/requests": "^1.8",
+        "google/apiclient": "2.11"
     }
 }
