--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "doctrine/orm": "^2.10.2",
     "doctrine/dbal": "^3.1.1",
     "symfony/yaml": "2.*",
-    "symfony/cache": "^5.3"
+    "symfony/cache": "^5.3",
+    "ext-pdo_sqlite": "*"
   },
   "autoload": {
       "psr-0": {"": "src/"}
